--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="column"></div>
+        <div class="column uno">
+          <p class="risultato"></p>
+        </div>
         <div class="column"></div>
         <div class="column"></div>
         <div class="column"></div>
