--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="column uno">
+        <div class="column">
           <p class="risultato"></p>
         </div>
-        <div class="column"></div>
+        <div class="column">
+          <p class="risultato"></p>
+        </div>
         <div class="column"></div>
         <div class="column"></div>
         <div class="column"></div>
